--- a/config-dev.yml
+++ b/config-dev.yml
@@ -7,6 +7,4 @@ spring:
 profile:
   master: dev
 config:
-  info: 
-    profile: dev
-    version: 1
+  info: "master branch, sprigcloud-config/config-dev.yml, version=1"
